--- a/index.htm
+++ b/index.htm
@@ -19,6 +19,7 @@
                 <a href="#home" class="active">Home</a>
                 <a href="#about">About</a>
                 <a href="#services">Services</a>
+                <a href="#Portfolio">Portfolio</a>
                 <a href="#Contact">Contact</a>
             </div>
         </nav>
@@ -30,7 +31,7 @@
                 <h4>Hello, I'm</h4>
                 <h1>Ibrahim Nasr</h1>
                 <p>IT Support Engineer</p>
-                <a href="#" class="btn">Download CV</a>
+                <a href="cv.pdf" class="btn"download="cv.pdf">Download CV</a>
             </div>
 
             <div class="hero-img">
@@ -44,7 +45,7 @@
     <section id="about" class="about">
         <div class="contanier">
             <div class="about-img">
-                <img src="img/cr=w_1240,h_620.webp" alt="">
+                <img src="img/about.jpg" alt="">
             </div>
             <div class="content">
                 <h1>About <span>Me</span></h1>
@@ -53,7 +54,7 @@
                     Bachelor’s degree computer science and information technology
                         from The Egyptian E-Learning University  my Major : IT</p>
                      <div class="btns">
-                        <a href="#" class="btn">Download CV</a>
+                        <a href="cv.pdf" class="btn"download="cv.pdf">Download CV</a>
                         <a href="#" class="btn">Contact Me</a>
                      </div>
             </div>
@@ -97,6 +98,7 @@
             </div>
         </div>
     </section>
+
     <!-- start Contact -->
 
     <section id="Contact" class="contact">
